# hoerbaer

./: .gitignore  README.md
firmware/: CMakeLists.txt  Configuration.h  Makefile  README.md  sdkconfig
firmware/components/audioplayer/: AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  IAudioFile.h  Mp3File.cpp  Mp3File.h  Mp3Playback.cpp  Mp3Playback.h  PlaybackBase.h  WavFile.cpp  WavFile.h  WavPlayback.cpp  WavPlayback.h
firmware/components/cpp_utils/: CMakeLists.txt  FreeRTOS.cpp  FreeRTOS.h  FreeRTOSTimer.cpp  GeneralUtils.cpp  SPI.cpp  Task.cpp  Task.h
firmware/components/libmad/: component.mk
firmware/components/storage/: CMakeLists.txt  Storage.cpp  Storage.h  component.mk
firmware/main/: BatteryGuard.cpp  BatteryGuard.h  CMakeLists.txt  HBI.cpp  HBI.h  HBIShift.cpp  HBIShift.h  HoerBaer.cpp  HoerBaer.h  main.cpp
hardware/: pinouts.md
hardware/BatteryMeasurement/: LOG000.CSV  LOG001.CSV  LOG002.CSV
hardware/HoerbaerMain/: HoerbaerAudio.kicad_sch  HoerbaerMain.kicad_pcb  HoerbaerMain.kicad_prl  HoerbaerMain.kicad_pro  HoerbaerMain.kicad_sch  HoerbaerPower.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
hardware/HoerbaerTatze/: HoerbaerTatze-cache.lib  HoerbaerTatze.bak  HoerbaerTatze.kicad_pcb  HoerbaerTatze.kicad_pcb-bak  HoerbaerTatze.net  HoerbaerTatze.sch  HoerbaerTatze_ohne595.kicad_pcb  HoerbaerTatze_ohne595.kicad_pcb-bak  Pfote.dxf
hardware/Lib/: HoerbaerParts.kicad_sym
test_wifi/: Makefile  sdkconfig
test_wifi/main/: WebServer.cpp  WebServer.h  main.cpp
webui/: package-lock.json  package.json
webui/src/: App.css  App.jsx
(+7 files in other folders)
